--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
+<html>
 <head>
 <!-- ***** charset ***** -->
 <meta charset="utf-8" />
 <title>TEST</title>
 <!-- *****  style ***** -->
-<style type="text/css">
-    body * {
-      display: block;
-    }
-    input {
-        padding: 10px;
-        width: 400px;
-        font-size: 16px;
-        border-radius: 10px;
-        border: 1px solid #DBDBDB;
-        margin-top: 10px;
-    }
-</style>
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-Hello World
-<a style="color: #2477AB; text-decoration: underline; cursor: pointer;" onclick="window.open('./page.html', '', 'width=700,height=500')">page.htmlにいく</a>
-<br>
-<label>名前</label><input name="name" type="text" class="jsc-text1" placeholder="例）麻生 太郎"><br>
-<label>生年月日</label><input name="birthday" type="text" class="jsc-text2" placeholder="例）1995/07/02"><br>
-<label>好きな食べ物</label><input name="like" type="text" class="jsc-text3">
+<h1>Hello World</h1>
+<p class="red">red</p>
+<p class="red">red</p>
+        <p class="red">red</p>
 <!-- ***** bottom script ***** -->
 <script src="/FrontEndStateKit/dist/js/lib/jquery-1.12.0.min.js"></script>
-<script src="/FrontEndStateKit/dist/js/jquery.cookie.js"></script>
 <script src="/FrontEndStateKit/dist/js/common.js"></script>
 </body>
 </html>
